tests/fixtures/errors/invalid_preproc_dynamic_invoke.puml
@startuml
%invoke_procedure("")
Alice -> Bob: unreachable
@enduml
